--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -20,11 +20,12 @@ jobs:
         run: |
           gem install relaton-cli
       - name: Fetch documents
-        run: relaton fetch-data iana-registries -f bibxml
-      - name: Push data
-        run: |
-          echo `date` > flag.txt
-          git config --global user.name "ietf-ribose-ci"
-          git config --global user.email "ietf-ribose-ci@users.noreply.github.com"
-          git add data/* flag.txt
-          git diff --quiet && git diff --staged --quiet || (git commit -m 'update documents' && git push)
+          run: ruby search_files.rb
+      #   run: relaton fetch-data iana-registries -f bibxml
+      # - name: Push data
+      #   run: |
+      #     echo `date` > flag.txt
+      #     git config --global user.name "ietf-ribose-ci"
+      #     git config --global user.email "ietf-ribose-ci@users.noreply.github.com"
+      #     git add data/* flag.txt
+      #     git diff --quiet && git diff --staged --quiet || (git commit -m 'update documents' && git push)
