--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -20,6 +20,8 @@ jobs:
         run: |
           gem install relaton-cli
       - name: Fetch documents
+        env:
+          GITHUB_TOKEN: GITHUB_TOKEN
         run: ruby search_files.rb
       #   run: relaton fetch-data iana-registries -f bibxml
       # - name: Push data
