--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -21,7 +21,7 @@ jobs:
           gem install relaton-cli
       - name: Fetch documents
         env:
-          GITHUB_TOKEN: GITHUB_TOKEN
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: ruby search_files.rb
       #   run: relaton fetch-data iana-registries -f bibxml
       # - name: Push data
